name:          W3W
version:       1.2.1
license:       MIT
license-file:  LICENSE
author:        Thorben Gülck, Mathias Leonhardt, Tobias Lüders, Uwe Schmidt
copyright:     Copyright (c) 2011-12 Thorben Gülck, Mathias Leonhardt, Tobias Lüders, Uwe Schmidt
maintainer:    Uwe Schmidt <uwe@fh-wedel.de>
stability:     experimental
category:      Text, Data
synopsis:      W3W: Was Wann Wo in Wedel: Termine und mehr an der FH Wedel
homepage:      http://w3w.fh-wedel.de/
description:   W3W: Was Wann Wo in Wedel: Termine und mehr an der FH Wedel
               Die Suchmaschine für Termine, Veranstaltungen und mehr an der FH Wedel
cabal-version: >=1.6
build-type:    Simple
-- tested-with:   ghc-7.0.3

-- ------------------------------------------------------------

executable w3wIndexer
  main-is: W3WIndexer.hs

  hs-source-dirs: src

  build-depends: ghc                    >= 7
               , base                   >= 4    && < 5
               , Holumbus-Searchengine  >= 1.2  && < 2
               , binary                 >= 0.5  && < 1
               , bytestring             >= 0.9  && < 1
               , bzlib                  >= 0.4  && < 1
               , containers             >= 0.2  && < 1
               , deepseq                >= 1.1  && < 2
               , filepath               >= 1    && < 2
               , haskell98              >= 1    && < 2
               , hxt                    >= 9.1  && < 10
               , hxt-cache              >= 9    && < 10
               , hxt-charproperties     >= 9    && < 10
               , hxt-curl               >= 9    && < 10
               , hxt-http               >= 9    && < 10
               , hxt-regex-xmlschema    >= 9    && < 10
               , hxt-xpath              >= 9.1  && < 10
               , network                >= 2.1  && < 3
               , parsec                 >= 2.1  && < 4
               , process                >= 1    && < 2
               , tar                    >= 0.3  && < 1
               , zlib                   >= 0.5  && < 1 

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -rtsopts

-- ------------------------------------------------------------

executable w3wServer
  main-is: Main.hs

  hs-source-dirs: src

  build-depends: ghc                        >= 7
               , base                       >= 4     && < 5
               , binary                     == 0.5.0.*
               , bytestring                 >= 0.9.1 && < 0.10
               , containers                 == 0.4.0.*
               , deepseq                    == 1.1.0.*
               , filepath                   == 1.2.0.*
               , heist                      >= 0.5   && < 0.6
               , Holumbus-Searchengine      >= 1.2
               , hxt                        >= 9.1
               , hxt-charproperties         >= 9
               , hxt-regex-xmlschema        >= 9
               , hxt-unicode                >= 9
               , json                       >= 0.4   && < 1
               , MonadCatchIO-transformers  >= 0.2.1 && < 0.3
               , mtl                        >= 2     && < 3
               , network                    == 2.3.0.*
               , snap                       == 0.4.*
               , snap-core                  == 0.4.*
               , snap-server                == 0.4.*
               , text                       >= 0.11  && < 0.12
               , time                       >= 1.1   && < 1.3
               , xhtml-combinators          == 0.2.*
               , xmlhtml                    == 0.1.*

  extensions: TypeSynonymInstances MultiParamTypeClasses

  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind

-- ------------------------------------------------------------