Name:                WWWCheck
Version:             0.1.1
Synopsis:            An URL checker based no the Holumbus framework
Description:         An URL checker based no the Holumbus framework         
License:             BSD3
License-file:        LICENSE
Author:              Uwe Schmidt
Maintainer:          uwe@fh-wedel.de
Copyright:           2011 Uwe Schmidt
Category:            Web
Build-type:          Simple

Extra-source-files:  examples/resultTemplate.html
                   , examples/Makefile

Cabal-version:       >=1.6


Executable WWWCheck
  Main-is:        URIChecker.hs
  
  Build-depends:  base >= 4 && < 5
                , Holumbus-Searchengine >= 1 && < 2
                , binary                >= 0.5 && < 1
                , bzlib                 >= 0.5 && < 1
                , containers            >= 0.3 && < 1
                , deepseq               >= 1.1 && < 2
                , filepath              >= 1.1 && < 2
                , hxt                   >= 9 && < 10
                , hxt-cache             >= 9 && < 10
                , hxt-curl              >= 9 && < 10
                , hxt-regex-xmlschema   >= 9 && < 10
  
  Other-modules:  WWWCheck.SimpleURIChecker
                , WWWCheck.OutputTemplate
                , WWWCheck.URIChecker

  hs-source-dirs: src, examples

  if impl( ghc >= 7 )
    ghc-options: -threaded -Wall -rtsopts
  else
    ghc-options: -threaded -Wall
