name:                crawl2
version:             0.0.2
synopsis:            A crawler for websites
description:         Runs through websites and crawls all documents.
category:            Web
license:             OtherLicense
license-file:        LICENSE
author:              Schmidt
maintainer:          uwe@fh-wedel.de
build-depends:       base
build-type:          Simple
Cabal-Version:       >= 1.2

extra-source-files:
  examples/mapfold/MapFold.hs
  Examples2/Re/Worker.hs
  Examples2/Re/SimpleSearch.hs
  Examples2/Re/Client.hs
  Examples2/Re/Makefile
  Examples2/Re/Standalone.hs
  Examples2/Re/MRIndexer.hs
  Examples2/Re/Common.hs
  Examples2/Re/CommonStandalone.hs

library
  build-depends:  base       >= 4   && < 5
                , binary     >= 0.4 && < 1
                , bytestring >= 0.9 && < 1
                , containers >= 0.1 && < 1
                , deepseq    >= 1.1 && < 2
                , directory  >= 1.0 && < 2
                , filepath   >= 1.1 && < 2
                , haskell98  >= 1   && < 2
                , hslogger   >= 1.0 && < 2
                , network    >= 2.1 && < 3
                , time       >= 1.1 && < 2
                , unix       >= 2.3 && < 3
                , mtl        >= 1.1 && < 2
                , hxt        >= 8.5 && < 9
                , hxt-cache  >= 0.0 && < 1
                , Holumbus-Searchengine >= 0.0.9

  ghc-options: -Wall -threaded
  hs-source-dirs:
                  src
  exposed-modules:
                  Holumbus.Crawler.Robots
                , Holumbus.Crawler.HtmlText
                , Holumbus.Crawler.Core
                , Holumbus.Crawler.URIChecker
                , Holumbus.Crawler.IndexerCore
                , Holumbus.Crawler.URIs
                , Holumbus.Crawler.Constants
                , Holumbus.Crawler.Util
                , Holumbus.Crawler.Html
                , Holumbus.DCrawler.Core
                , Holumbus.DCrawler.IndexerCore
                , Holumbus.DCrawler.Robots
                , Holumbus.DCrawler.HtmlText
                , Holumbus.DCrawler.URIs
                , Holumbus.DCrawler.Constants
                , Holumbus.DCrawler.Util
                , Holumbus.DCrawler.Html
                , Control.Concurrent.MapFold
                , Control.Monad.ReaderStateIO
                , Data.Function.Selector
