name:          Holumbus-Distribution
version:       0.1.0
license:       OtherLicense
license-file:  LICENSE
author:        Uwe Schmidt, Stefan Schmidt
copyright:     Copyright (c) 2008 Uwe Schmidt, Stefan Schmidt
maintainer:    Stefan Schmidt <sts@holumbus.org>
stability:     experimental
category:      Distributed Computing, Data, Network
synopsis:      A framework for intra- and inter-programm communication
homepage:      http://holumbus.fh-wedel.de
description:   This package contains Erlang-Style mailboxes for an easy implementation of distributed systems in Haskell.
build-type:    Simple
cabal-version: >=1.6

library
  build-Depends:  base       >= 4
                , binary     >= 0.4
                , bytestring >= 0.9
                , containers >= 0.1
                , editline   >= 0.2
                , haskell98  >= 1
                , hslogger   >= 1.0
                , hxt        >= 8.3
                , network    >= 2.1
                , time       >= 1.1
                , unix       >= 2.3

  hs-source-dirs: 
                  source
  exposed-modules:  
                  Holumbus.Data.AccuMap
                , Holumbus.Data.KeyMap
                , Holumbus.Data.MultiMap
                , Holumbus.Network.Communication
                , Holumbus.Network.Core
                , Holumbus.Network.Messages
                , Holumbus.Network.Port
                , Holumbus.Network.Site
                , Holumbus.Network.PortRegistry
                , Holumbus.Network.PortRegistry.Messages
                , Holumbus.Network.PortRegistry.PortRegistryData
                , Holumbus.Network.PortRegistry.PortRegistryPort
                , Holumbus.Console.Console
                , Holumbus.Common.Debug
                , Holumbus.Common.FileHandling
                , Holumbus.Common.Logging
                , Holumbus.Common.Threading
                , Holumbus.Common.Utils

  ghc-options: -Wall -threaded
  extensions: Arrows DeriveDataTypeable ExistentialQuantification