name:          Holumbus-Distribution
version:       0.1.1
license:       OtherLicense
license-file:  LICENSE
author:        Stefan Schmidt, Uwe Schmidt
copyright:     Copyright (c) 2010 Stefan Schmidt, Uwe Schmidt, Sebastian Reese
maintainer:    Stefan Schmidt <sts@holumbus.org>
stability:     experimental
category:      Distributed Computing, Network
synopsis:      intra- and inter-program communication
homepage:      http://holumbus.fh-wedel.de
description:   Holumbus-Distribution offers distributed data structures like Chan, MVar or functions.
               These datatype can be used between different programs on different computers to exchange
               data. With the help of this library it is possible to build Erlang-Style mailboxes for an
               easy implementation of distributed systems in Haskell. 
build-type:    Simple
cabal-version: >=1.6

extra-source-files:
    README
    Makefile
    Programs/Makefile
    Programs/PortRegistry/Makefile
    Programs/PortRegistry/PortRegistry.hs
    Programs/PortRegistryDaemon/Makefile
    Programs/PortRegistryDaemon/PortRegistryDaemon.hs    
    Examples/Makefile
    Examples/ClientServer/Client.hs
    Examples/ClientServer/Makefile
    Examples/ClientServer/Server.hs
    Examples/Ports/Makefile
    Examples/Ports/Receiver.hs
    Examples/Ports/Sender.hs
    Examples/Ports/Single.hs
    Examples/Distribution/Makefile
    Examples/Distribution/ChatDChan/ClientDChan.hs
    Examples/Distribution/ChatDChan/Makefile
    Examples/Distribution/ChatDChan/ServerDChan.hs
    Examples/Distribution/ChatDChan/MessagesDChan.hs
    Examples/Distribution/ChatDFunction/ClientDFunction.hs
    Examples/Distribution/ChatDFunction/InterfacesDFunction.hs
    Examples/Distribution/ChatDFunction/Makefile
    Examples/Distribution/ChatDFunction/ServerDFunction.hs
    Examples/Distribution/CounterDFunction/Makefile
    Examples/Distribution/CounterDFunction/MasterCounter.hs
    Examples/Distribution/CounterDFunction/SlaveCounter.hs
    Examples/Distribution/CounterDMVar/Makefile
    Examples/Distribution/CounterDMVar/MasterCounter.hs
    Examples/Distribution/CounterDMVar/SlaveCounter.hs
    Examples/Distribution/CounterDMVar/WaitSlaveCounter.hs
    Examples/Distribution/CounterDMVar/ErrorSlaveCounter.hs
    Examples/Distribution/HelloWorld/Makefile
    Examples/Distribution/HelloWorld/Receiver.hs
    Examples/Distribution/HelloWorld/Sender.hs


library
  build-depends:  base       >= 4 && < 5
                , binary     >= 0.4
                , bytestring >= 0.9
                , containers >= 0.1
                , haskell98  >= 1
                , hslogger   >= 1.0
                , hxt        >= 8.2 
                , network    >= 2.1
                , time       >= 1.1
                , unix       >= 2.3
                , random     >= 1.0
                , stm        >= 2.1.1.2
                , deepseq    >= 1.1 && < 2
                , array      >= 0.2.0.0
                , readline   >= 1 && < 2

  hs-source-dirs: 
                  source
  exposed-modules: Holumbus.Data.AccuMap
                 , Holumbus.Data.KeyMap
                 , Holumbus.Data.MultiMap
                 , Holumbus.Network.Communication
                 , Holumbus.Network.Core
                 , Holumbus.Network.Messages
                 , Holumbus.Network.Port
                 , Holumbus.Network.Site
                 , Holumbus.Network.DoWithServer                 
                 , Holumbus.Network.PortRegistry
                 , Holumbus.Network.PortRegistry.Messages
                 , Holumbus.Network.PortRegistry.PortRegistryData
                 , Holumbus.Network.PortRegistry.PortRegistryPort
                 , Holumbus.Distribution.DNode
                 , Holumbus.Distribution.DNode.Network
                 , Holumbus.Distribution.DNode.Base
                 , Holumbus.Distribution.DChan
                 , Holumbus.Distribution.DStreamPort
                 , Holumbus.Distribution.DFunction
                 , Holumbus.Distribution.DMVar
                 , Holumbus.Distribution.DValue
                 , Holumbus.Console.Console
                 , Holumbus.Console.ServerConsole                 
                 , Holumbus.Common.Debug
                 , Holumbus.Common.FileHandling
                 , Holumbus.Common.Logging
                 , Holumbus.Common.Threading
                 , Holumbus.Common.Utils

  ghc-options: -Wall
  extensions: Arrows DeriveDataTypeable ExistentialQuantification FlexibleContexts

executable PortRegistry
  main-is: PortRegistry.hs
  hs-source-dirs: Programs/PortRegistry source
  ghc-options: -Wall -threaded
  extensions: Arrows DeriveDataTypeable ExistentialQuantification FlexibleContexts

executable PortRegistryDaemon
  main-is: PortRegistryDaemon.hs
  hs-source-dirs: Programs/PortRegistryDaemon source
  ghc-options: -Wall -threaded
  extensions: Arrows DeriveDataTypeable ExistentialQuantification FlexibleContexts
