name:          Holumbus-MapReduce
version:       0.1.0
license:       OtherLicense
license-file:  LICENSE
author:        Uwe Schmidt, Stefan Schmidt
copyright:     Copyright (c) 2008 Uwe Schmidt, Stefan Schmidt
maintainer:    Stefan Schmidt <sts@holumbus.org>
stability:     experimental
category:      Text, Data
synopsis:      A distributed map-reduce framework
homepage:      http://holumbus.fh-wedel.de
description:   this package contains Erlang-Style Mailboxes, a distributed filesystem and a distributed mapreduce framework
cabal-version: >=1.2

flag splitBase
  description: Choose the new smaller, split-up base package.

library
  Build-Depends:  base >= 3
                , haskell98
                , containers
                , hslogger
                , directory
                , network
                , time
                , bytestring
                , binary
                , hxt
                , Holumbus-Distribution >= 0.1.0

  hs-source-dirs: 
                  source
  exposed-modules:  
                  Holumbus.Distribution.DMapReduce
                , Holumbus.Distribution.Messages
                , Holumbus.Distribution.Worker
                , Holumbus.Distribution.Worker.WorkerData
                , Holumbus.Distribution.Worker.WorkerPort
                , Holumbus.Distribution.Master
                , Holumbus.Distribution.Master.MasterData
                , Holumbus.Distribution.Master.MasterPort
                , Holumbus.Standalone.SMapReduce
                , Holumbus.MapReduce.MapReduce
                , Holumbus.MapReduce.JobController
                , Holumbus.MapReduce.TaskProcessor
                , Holumbus.MapReduce.Types
                , Holumbus.MapReduce.UserInterface
                , Holumbus.FileSystem.UserInterface
                , Holumbus.FileSystem.FileSystem
                , Holumbus.FileSystem.Storage
                , Holumbus.FileSystem.Storage.FileStorage
                , Holumbus.FileSystem.Messages
                , Holumbus.FileSystem.Node
                , Holumbus.FileSystem.Node.NodeData
                , Holumbus.FileSystem.Node.NodePort
                , Holumbus.FileSystem.Controller
                , Holumbus.FileSystem.Controller.ControllerData
                , Holumbus.FileSystem.Controller.ControllerPort
  ghc-options: -Wall -threaded -O
