name:          Holumbus-MapReduce
version:       0.0.1
license:       OtherLicense
license-file:  LICENSE
author:        Uwe Schmidt, Stefan Schmidt
copyright:     Copyright (c) 2008 Uwe Schmidt, Stefan Schmidt
maintainer:    Stefan Schmidt <sts@holumbus.org>
stability:     experimental
category:      Distributed Computing
synopsis:      a distributed MapReduce framework
homepage:      http://holumbus.fh-wedel.de
description:   This package contains a library and tools for the
               creation of distributed MapReduce applications.
build-type:    Simple
cabal-version: >=1.6

extra-source-files:
    README
    Makefile
    Programs/Makefile
    Programs/MapReduceMaster/Makefile
    Programs/MapReduceMaster/Master.hs
    Examples/MapReduce/Crawler/Config.hs
    Examples/MapReduce/Crawler/Crawl.hs
    Examples/MapReduce/Crawler/Index.hs
    Examples/MapReduce/Crawler/CrawlerClient.hs
    Examples/MapReduce/Crawler/CrawlerWorker.hs
    Examples/MapReduce/Crawler/Makefile
    Examples/MapReduce/DummyFiles/ClientMain.hs
    Examples/MapReduce/DummyFiles/WorkerMain.hs
    Examples/MapReduce/Standalone/Makefile
    Examples/MapReduce/Standalone/StandaloneMain.hs
    Examples/MapReduce/Makefile
    Examples/MapReduce/WordFrequency/WordFrequency.hs
    Examples/MapReduce/WordFrequency/ClientMain.hs
    Examples/MapReduce/WordFrequency/Makefile
    Examples/MapReduce/WordFrequency/WorkerMain.hs
    Examples/MapReduce/Grep/ClientMain.hs
    Examples/MapReduce/Grep/Grep.hs
    Examples/MapReduce/Grep/Makefile
    Examples/MapReduce/Grep/WorkerMain.hs
    Examples/MapReduce/Sort/ClientMain.hs
    Examples/MapReduce/Sort/Makefile
    Examples/MapReduce/Sort/Sort.hs
    Examples/MapReduce/Sort/WorkerMain.hs
    Examples/Makefile
    Examples/Utils/PickleTest/Makefile
    Examples/Utils/PickleTest/PickleTest.hs

library
  build-depends:  base >= 3
                , binary     >= 0.4
                , bytestring >= 0.9
                , containers >= 0.1
                , directory  >= 1.0
                , haskell98  >= 1
                , hslogger   >= 1.0
                , hxt        >= 8.2
                , network    >= 2.1
                , time       >= 1.1
                , unix       >= 2.3
                , Holumbus-Distribution >= 0.0.1
                , Holumbus-Storage >= 0.0.1

  hs-source-dirs: 
                  source
  exposed-modules:  
                  Holumbus.Distribution.DMapReduce
                , Holumbus.Distribution.Messages
                , Holumbus.Distribution.Worker
                , Holumbus.Distribution.Worker.WorkerData
                , Holumbus.Distribution.Worker.WorkerPort
                , Holumbus.Distribution.Master
                , Holumbus.Distribution.Master.MasterData
                , Holumbus.Distribution.Master.MasterPort
                , Holumbus.Standalone.SMapReduce
                , Holumbus.MapReduce.MapReduce
                , Holumbus.MapReduce.JobController
                , Holumbus.MapReduce.TaskProcessor
                , Holumbus.MapReduce.Types
                , Holumbus.MapReduce.UserInterface
  ghc-options: -Wall -threaded
  extensions: Arrows DeriveDataTypeable ExistentialQuantification

executable Master
  main-is: Master.hs
  hs-source-dirs: Programs/MapReduceMaster source
  ghc-options: -Wall -threaded
  extensions: Arrows DeriveDataTypeable ExistentialQuantification
